# task-about-it

./: .gitignore  README.md  main.py  pyproject.toml  run-redis.sh  worker_high.py  worker_low.py  worker_medium.py
task_about_it/: main.py  worker.py
task_about_it/lib/: tasks.py
task_about_it/tests/lib/: test_main.py  test_tasks.py
